--- a/views/layout.html
+++ b/views/layout.html
@@ -1,25 +1,46 @@
 <!DOCTYPE html>
 <html>
+
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <title>My Sample Node Express Angular MySQL</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width">
+    <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
+	<link rel="stylesheet" href="/public/stylesheets/style.css">
+</head>
+
 <body>
 
-<div id="container" style="width:500px">
+	<div id="container" style="width:500px">
 
-<div id="header" style="background-color:#FFA500;">
-<h1 style="margin-bottom:0;">Main Title of Web Page</h1></div>
+		<div id="header" style="background-color:#FFA500;">
+			<h1 style="margin-bottom:0;">Main Title of Web Page</h1>
+		</div>
 
-<div id="menu" style="background-color:#FFD700;height:200px;width:100px;float:left;">
-<b>Menu</b><br>
-HTML<br>
-CSS<br>
-JavaScript</div>
+		<div id="menu" style="background-color:#FFD700;height:200px;width:100px;float:left;">
+			<b>Menu</b><br>
+			HTML<br>
+			CSS<br>
+			JavaScript
+		</div>
 
-<div id="content" style="background-color:#EEEEEE;height:200px;width:400px;float:left;">
-Content goes here</div>
+		<div id="content" style="background-color:#EEEEEE;height:200px;width:400px;float:left;">
+			<%- body %>
+		</div>
 
-<div id="footer" style="background-color:#FFA500;clear:both;text-align:center;">
-Copyright © W3Schools.com</div>
+		<div id="footer" style="background-color:#FFA500;clear:both;text-align:center;">
+			Copyright © W3Schools.com
+		</div>
 
-</div>
+	</div>
 
 </body>
+
+<script type="text/javascript" src="/public/libs/jquery/jquery.min.js"></script>
+<script type="text/javascript" src="/public/libs/angular/angular.js"></script>
+<script type="text/javascript" src="/public/libs/angular-route/angular-route.js"></script>
+<script type="text/javascript" src="/public/libs/bootstrap/dist/js/bootstrap.min.js"></script>
+
 </html>
